<resources>
    <string name="app_name">掌升活</string>
    <string name="phoneNumber">手机号</string>
    <string name="getVerigyCode">获取验证码</string>
    <string name="verifyCode">验证码</string>
    <string name="signIn">登录</string>
    <string name="iAgree">我已阅读并同意</string>
    <string name="homePage">首页</string>
    <string name="vip">VIP</string>
    <string name="discover">发现</string>
    <string name="order">订单</string>
    <string name="my">我的</string>
    <string name="agreement">掌升活服务协议</string>
    <string name="searchHint">请输入商家、商品名称</string>
    <string name="scanQr">扫一扫</string>
    <string name="hui">惠</string>
    <string name="huiDiDeliver">惠递配送</string>
    <string name="lifeSupermarket">升活超市</string>
    <string name="varietyOfFresh">果蔬生鲜</string>
    <string name="flowersCakes">鲜花糕点</string>
    <string name="infantMom">母婴</string>
    <string name="specialCate">特色美食</string>
    <string name="exclusiveShop">专卖店</string>
    <string name="catering">餐饮</string>
    <string name="merchantDeliver">商家配送</string>
    <string name="homeDelivery">配送到家</string>
    <string name="toShop">到店消费</string>
    <string name="vipMerchant">vip商家</string>
    <string name="flashSale">限时抢购</string>
    <string name="recommendMerchant">推荐商家</string>
    <string name="quantityActivity">个活动</string>
    <string name="monthSalesVolume">月销售</string>
    <string name="freight">配送费</string>
    <string name="freightWay">配送方式</string>
    <string name="freightMember">配送骑手</string>
    <string name="meter">m以内</string>
    <string name="meterKm">km以内</string>
    <string name="consumptionWay">消费方式</string>
    <string name="gold">掌币</string>
    <string name="tomorrowSignIn">明天签到</string>
    <string name="sort">排序</string>
    <string name="filtrate">筛选</string>
    <string name="shop">商店</string>
    <string name="evaluate">评价</string>
    <string name="becomeMember">成为会员</string>
    <string name="MerchantParticulars">商家详情</string>
    <string name="distanceMerchant">距离商家</string>
    <string name="merchantDistributionDistance">商家配送距离</string>
    <string name="price">价格</string>
    <string name="site">地址</string>
    <string name="announcement">公告</string>
    <string name="activityService">活动与服务</string>
    <string name="rimComparison">周边比较</string>
    <string name="evaluateQuantity">条评价</string>
    <string name="shoppingCart">购物车</string>
    <string name="closeAccount">结算</string>
    <string name="tableReservation">订座</string>
    <string name="linkmanContacts">联系人</string>
    <string name="isPrivateRoom">是否需要包房</string>
    <string name="privateRoom">包房</string>
    <string name="shipingAddress">收货地址</string>
    <string name="addAddress">添加地址</string>
    <string name="houseNumbwe">门牌号</string>
    <string name="name">姓名</string>
    <string name="contactPhone">联系电话</string>
    <string name="merchantDiscountCoupon">商家优惠券</string>
    <string name="full">满</string>
    <string name="minus">减</string>
    <string name="expirationDate">截止日期</string>
    <string name="use">使用</string>
    <string name="enjoyActivitys">享受活动</string>
    <string name="packingExpense">包装费</string>
    <string name="remark">备注</string>
    <string name="deliveryTime">送达时间</string>
    <string name="arrivalTime">到达时间</string>
    <string name="asSoonAsPossible">尽快送达</string>
    <string name="freeShipping">选择商家免\n费配送地址</string>
    <string name="particulars">详情</string>
    <string name="addShoppingCart">加入购物车</string>
    <string name="buyImmediately">立即购买</string>
    <string name="select">挑选</string>
    <string name="parameter">参数</string>
    <string name="category">品类</string>
    <string name="specification">规格</string>
    <string name="purchaseQuantity">购买数量</string>
    <string name="allReveal">全部展开</string>
    <string name="conceal">隐藏</string>
    <string name="noComments">暂无评论</string>
    <string name="cityProper">城区</string>
    <string name="everyDaySspecial">天天特价</string>
    <string name="currencyShop">掌币商城</string>
    <string name="conversionRecord">兑换记录</string>
    <string name="everyBodyAllConversion">大家都在兑</string>
    <string name="detailsDescription">详情说明</string>
    <string name="briefIntroduction">简介</string>
    <string name="conversionProcess">兑换流程</string>
    <string name="mattersNeedAttention">注意事项</string>
    <string name="snapUp">立即抢购</string>
    <string name="activityShop">活动商城</string>
    <string name="spellLuck">拼拼运气</string>
    <string name="all">全部</string>
    <string name="pendingPay">待付款</string>
    <string name="waitingBills">待接单</string>
    <string name="inYheDistribution">配送中</string>
    <string name="offTheStocks">已完成</string>
    <string name="alreadyCancelation">已取消</string>
    <string name="cancelation">取消</string>
    <string name="pendingReviews">待评价</string>
    <string name="alreadyClose">已关闭</string>
    <string name="contactWithTheRider">联系骑手</string>
    <string name="makeSurtTheGoods">确定收货</string>
    <string name="commodityOrder">商品订单</string>
    <string name="shippingInfo">配送信息</string>
    <string name="orderDetali">订单信息</string>
    <string name="orderCode">订单号</string>
    <string name="orderTime">下单时间</string>
    <string name="zshUser">掌升活用户</string>
    <string name="anonymityUser">匿名用户</string>
    <string name="scoreForMerchants">为商家打分</string>
    <string name="inputDetail">请填写详细内容</string>
    <string name="product">产品</string>
    <string name="goodReputation">好评</string>
    <string name="shippingService">配送服务</string>
    <string name="anonymityEvaluate">匿名评价</string>
    <string name="collectMerchant">收藏商家</string>
    <string name="functionException">FunctionException</string>
    <string name="terraceFunctionException">平台功能异常</string>
    <string name="distributionProblem">DistributionProblem</string>
    <string name="distributionIssue">配送问题</string>
    <string name="txceptionType">txceptionType</string>
    <string name="productSuggest">产品建议</string>
    <string name="productSuggestion">ProductSuggestion</string>
    <string name="symbol"></string>
    <string name="sign">￥</string>
    <string name="confirm">确定</string>
    <string name="distance">距离</string>
    <string name="one">单</string>
    <string name="sheet">张</string>
    <string name="economize">省</string>
    <string name="few">少</string>
    <string name="minute">分</string>
    <string name="pay">支付</string>
    <string name="payWay">支付方式</string>
    <string name="alipayPay">支付宝支付</string>
    <string name="weChatPay">微信支付</string>
    <string name="balancePay">余额支付</string>
    <string name="paymentSuccess">&lt;o.o&gt;支付成功</string>
    <string name="paymentFailure">&lt;v.v&gt;支付失败</string>
    <string name="temporaryNotOpen">&lt;v.0&gt;支付失败</string>
    <string name="nameError">&lt;v.v&gt;名字错误</string>
    <string name="phoneError">&lt;v.v&gt;电话错误</string>
    <string name="reservationTimeError">&lt;v.v&gt;订座时间错误</string>
    <string name="selectCommodityAttribute">请选择商品属性</string>
    <string name="timeServiceError">送达时间错误</string>
    <string name="inputIncomplete">输入不全</string>
    <string name="failedLinePlanning">&lt;v.v&gt;线路规划失败</string>
    <string name="submitDataDefeated">&lt;v.v&gt;提交失败</string>
    <string name="submitSucceed">&lt;o.o&gt;提交成功</string>
    <string name="addSucceed">&lt;o.o&gt;添加成功</string>
    <string name="getDataDefeated">&lt;v.v&gt;获取数据失败</string>
    <string name="parseFailure">&lt;v.v&gt;解析数据失败</string>
    <string name="noCode">&lt;o.o&gt;验证码似乎不对</string>
    <string name="agreementDisagee">&lt;o.o&gt;协议未同意</string>
    <string name="signInDefeated">&gt;.&lt;登录失败</string>
    <string name="payLifeLoading">玩命加载中...</string>
    <string name="noData">暂无数据</string>
    <string name="sqlLibrary">zsh7.db</string>
    <string name="config">config</string>
    <string name="first">first</string>
    <string name="user">user</string>
    <string name="userId">userId</string>
    <string name="article">article</string>
    <string name="addressee">addressee</string>
    <string name="address">address</string>
    <string name="phone">phone</string>
    <string name="consigneeAddress">consigneeAddress</string>
    <string name="title">title</string>
    <string name="path">path</string>
    <string name="type">type</string>
    <string name="attach">attach</string>
    <string name="param">param</string>
    <string name="paramKey">param</string>
    <string name="paramValue">param</string>
    <string name="paramBody">param</string>
    <string name="requestParam">requestParam</string>
    <string name="requestParamKey">requestParam</string>
    <string name="requestParamValue">requestParam</string>
    <string name="requestParamBody">requestParam</string>
    <string name="transfer">transfer</string>
    <string name="transferHead">transferHead</string>
    <string name="transferBody">transferBody</string>
    <string name="transferTail">transferTail</string>
    <string name="send">send</string>
    <string name="sendHead">sendHead</string>
    <string name="sendBody">sendBody</string>
    <string name="sendTail">sendTail</string>
    <string name="addition">addition</string>
    <string name="returnData">returnData</string>
    <string name="result">result</string>
    <string name="notification">notification</string>
    <string name="line">line</string>
    <string name="index">index</string>
    <string name="position">position</string>
    <string name="point">point</string>
    <string name="location">location</string>
    <string name="province">province</string>
    <string name="city">city</string>
    <string name="district">district</string>
    <string name="street">street</string>
    <string name="streetNum">streetNum</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="ip">http://www.zsh7.com/slowlife/</string>
    <string name="search">appshopuser/queryshoporproduct</string>
    <string name="searchCommodity">appshopuser/getshopproduct</string>
    <string name="getRecyclerImage">appshopuser/getzshadvertisement</string>
    <string name="recyclerImagePath">img/advertisement/</string>
    <string name="shopImagePath">img/shop/</string>
    <string name="userHead">img/userinfo/</string>
    <string name="pictureLibraryPath">img/pictureLibrary/</string>
    <string name="getMessage">share/getsmsmobile</string>
    <string name="login">appshopuser/zshuserlogin</string>
    <string name="vipShops">appshopuser/queryusercollectionshop</string>
    <string name="flashSaleUrl">appshopuser/queryseckillproduct</string>
    <string name="recommendShops">appshopuser/queryrecommendshop</string>
    <string name="usersign">appshopuser/usersign</string>
    <string name="shopUrl">appshopuser/indexqueryshop</string>
    <string name="selectQuery">appshopuser/queryshopbycondition</string>
    <string name="shopInfo">appshopuser/shopdetails</string>
    <string name="shopClass">appshopuser/getproductclass</string>
    <string name="shopVip">appshopuser/collectionshop</string>
    <string name="shopComment">appuser/pagequeryevaluates</string>
    <string name="commodity">appshopuser/getproduct</string>
    <string name="commodityParticulars">appshopuser/getproductbyproductid</string>
    <string name="addShoppingCartPath">appshopuser/addproducttoshopcart</string>
    <string name="updateShoppingCartPath">appshopuser/updateproductnumofshopcart</string>
    <string name="emptyShopShoppingCart">appshopuser/delproductofshopcart</string>
    <string name="commodityComment">appshopuser/getproductevaluate</string>
    <string name="shoppingTrolley">appshopuser/pagequeryproductofshopcart</string>
    <string name="advanceOrder">appshopuser/addadvanceorder</string>
    <string name="getAddress">appuser/usergetaddresses</string>
    <string name="updateOrder">appshopuser/modifyorderproductnumberofapp</string>
    <string name="discountCoupon">appshopuser/getusershopcoupon</string>
</resources>