<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGray">
    <include layout="@layout/include_titlebar" android:id="@+id/titlebar"/>
    <LinearLayout
        android:id="@+id/linearWay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/titlebar"
        android:background="@color/white">
        <TextView
            android:id="@+id/text_homeDelivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/margin8"
            android:text="@string/homeDelivery"
            android:textColor="@color/scarlet"
            android:textSize="@dimen/size20"/>
        <TextView
            android:id="@+id/text_toShop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/margin8"
            android:text="@string/toShop"
            android:textColor="@color/textDarkgray"
            android:textSize="@dimen/size16"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/line1"
        android:layout_below="@+id/linearWay"
        android:layout_above="@+id/linear"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/text_linkmanContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/margin16"
                android:drawableRight="@mipmap/icon_right"
                android:text="@string/linkmanContacts"
                android:textSize="@dimen/size16"
                android:textColor="@color/textGray"/>
            <TextView
                android:id="@+id/text_deliveryTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/line1"
                android:padding="@dimen/margin16"
                android:background="@color/white"
                android:drawableRight="@mipmap/icon_right"
                android:text="@string/deliveryTime"
                android:textColor="@color/textGray"
                android:textSize="@dimen/size16"/>
            <TextView
                android:id="@+id/text_shopName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin8"
                android:padding="@dimen/margin16"
                android:background="@color/white"
                android:drawableRight="@mipmap/icon_right"
                android:text="shopName"
                android:textColor="@color/textGray"
                android:textSize="@dimen/size16"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"/>
            <TextView
                android:id="@+id/text_discountCoupon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/line1"
                android:padding="@dimen/margin16"
                android:background="@color/white"
                android:drawableRight="@mipmap/icon_right"
                android:text="@string/merchantDiscountCoupon"
                android:textColor="@color/textGray"
                android:textSize="@dimen/size16"/>
            <TextView
                android:id="@+id/text_enjoyActivitys"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/line1"
                android:padding="@dimen/margin16"
                android:background="@color/white"
                android:drawableRight="@mipmap/icon_right"
                android:text="@string/enjoyActivitys"
                android:textColor="@color/textGray"
                android:textSize="@dimen/size16"/>
            <TextView
                android:id="@+id/text_packingExpense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/line1"
                android:padding="@dimen/margin16"
                android:background="@color/white"
                android:drawableRight="@mipmap/icon_right"
                android:text="@string/packingExpense"
                android:textColor="@color/textGray"
                android:textSize="@dimen/size16"/>
            <TextView
                android:id="@+id/text_freight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/line1"
                android:padding="@dimen/margin16"
                android:background="@color/white"
                android:drawableRight="@mipmap/icon_right"
                android:text="@string/freight"
                android:textColor="@color/textGray"
                android:textSize="@dimen/size16"/>
            <EditText
                android:id="@+id/text_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/line1"
                android:padding="@dimen/margin16"
                android:background="@color/white"
                android:hint="@string/remark"
                android:textColor="@color/textDarkgray"
                android:textSize="@dimen/size16"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:background="@color/lucencyBlack60"
            android:padding="@dimen/margin16"
            android:text="@string/sign"
            android:textColor="@color/white"
            android:textSize="@dimen/size20"/>
        <TextView
            android:id="@+id/text_freeShipping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@color/orangeColur"
            android:padding="@dimen/margin8"
            android:text="@string/freeShipping"
            android:textColor="@color/white"
            android:textSize="@dimen/size16"
            android:visibility="visible"/>
        <TextView
            android:id="@+id/text_pay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@color/scarlet"
            android:padding="@dimen/margin16"
            android:text="@string/pay"
            android:textColor="@color/white"
            android:textSize="@dimen/size20"/>
    </LinearLayout>
</RelativeLayout>