<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundGray">
    <include layout="@layout/include_titlebar"
        android:id="@+id/title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin16">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin8"
            android:gravity="center_vertical"
            android:text="@string/phoneNumber"
            android:textColor="@color/textGray"
            android:textSize="@dimen/size20"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/edit_phone"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:maxLength="11"
            android:padding="@dimen/margin8"
            android:inputType="number"
            android:hint="@string/phoneNumber"
            android:layout_gravity="center"
            android:background="@color/white" />
        <TextView
            android:id="@+id/text_getVerigyCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin8"
            android:padding="@dimen/margin4"
            android:gravity="center_vertical"
            android:background="@drawable/selector_verigy_code"
            android:text="@string/getVerigyCode"
            android:textColor="@color/white"
            android:textSize="@dimen/size16" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/line1"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin8"
            android:gravity="center"
            android:text="@string/verifyCode"
            android:textColor="@color/textGray"
            android:textSize="@dimen/size20"
            android:visibility="gone" />
        <EditText
            android:id="@+id/edit_verifyCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:hint="@string/verifyCode"
            android:padding="@dimen/margin8" />
    </LinearLayout>
    <TextView
        android:id="@+id/text_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin8"
        android:background="@drawable/shape_rectangle_corners_scarlet"
        android:gravity="center"
        android:padding="@dimen/margin8"
        android:text="@string/signIn"
        android:textColor="@color/white"
        android:textSize="@dimen/size20" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/checkbox_iAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/iAgree"
            android:textSize="@dimen/size16" />
        <TextView
            android:id="@+id/text_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement"
            android:textColor="@color/scarlet"
            android:textSize="@dimen/size20" />
    </LinearLayout>
</LinearLayout>