<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin48"
        android:background="@color/scarlet">
        <ImageView
            android:id="@+id/image_goBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:padding="16dp"
            android:src="@mipmap/icon_go_back"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/image_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin32"
        android:src="@mipmap/icon_shopping_cart"/>
    <TextView
        android:id="@+id/text_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/image_shop"
        android:text="status"
        android:textColor="@color/textDarkgray"
        android:textSize="@dimen/size20"/>
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_status"
        android:background="@drawable/shape_rectangle_corners_scarlet"
        android:padding="@dimen/margin8"
        android:text="text"
        android:textColor="@color/white"
        android:textSize="@dimen/size16"/>
    <TextView
        android:id="@+id/text_shopName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_marginTop="@dimen/margin8"
        android:padding="@dimen/margin16"
        android:drawableLeft="@mipmap/icon_shop"
        android:drawableRight="@mipmap/icon_right"
        android:drawablePadding="@dimen/margin8"
        android:background="@color/white"
        android:text="shopName"
        android:textSize="@dimen/size16"
        android:textColor="@color/textDarkgray"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_shopName"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recycler"
                android:layout_margin="@dimen/margin16"
                android:text="@string/packingExpense"
                android:textColor="@color/textDarkgray"
                android:textSize="@dimen/size16" />
            <TextView
                android:id="@+id/text_packingExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/recycler"
                android:layout_margin="@dimen/margin16"
                android:text="packingExpense"
                android:textColor="@color/textDarkgray"
                android:textSize="@dimen/size16" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_packingExpense"
                android:layout_marginLeft="@dimen/margin16"
                android:text="@string/freight"
                android:textColor="@color/textDarkgray"
                android:textSize="@dimen/size16" />
            <TextView
                android:id="@+id/text_freight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/text_packingExpense"
                android:layout_marginRight="@dimen/margin16"
                android:text="freight"
                android:textColor="@color/textDarkgray"
                android:textSize="@dimen/size16" />
            <TextView
                android:id="@+id/text_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/text_freight"
                android:layout_margin="@dimen/margin16"
                android:text="sum"
                android:textColor="@color/scarlet"
                android:textSize="@dimen/size16" />
            <TextView
                android:id="@+id/text_contactPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_sum"
                android:layout_centerHorizontal="true"
                android:background="@drawable/shape_rectangle_contour_gray"
                android:drawableLeft="@mipmap/phone"
                android:drawablePadding="@dimen/margin4"
                android:padding="@dimen/margin8"
                android:text="@string/contactPhone"
                android:textColor="@color/textDarkgray"
                android:textSize="@dimen/size16" />
            <TextView
                android:id="@+id/shippingInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_contactPhone"
                android:layout_margin="@dimen/margin16"
                android:text="@string/shippingInfo"
                android:textColor="@color/textDarkgray"
                android:textSize="@dimen/size16" />
            <TextView
                android:id="@+id/text_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/shippingInfo"
                android:layout_marginLeft="@dimen/margin16"
                android:text="@string/shipingAddress"
                android:textColor="@color/textDarkgray"
                android:textSize="@dimen/size16" />
            <TextView
                android:id="@+id/text_freightWay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_address"
                android:layout_marginLeft="@dimen/margin16"
                android:text="@string/freightWay"
                android:textColor="@color/textDarkgray"
                android:textSize="@dimen/size16" />
            <TextView
                android:id="@+id/text_freightMember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_freightWay"
                android:layout_marginLeft="@dimen/margin16"
                android:text="@string/freightMember"
                android:textColor="@color/textDarkgray"
                android:textSize="@dimen/size16" />
            <TextView
                android:id="@+id/text_remark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_freightMember"
                android:layout_marginLeft="@dimen/margin16"
                android:text="@string/remark"
                android:textColor="@color/textDarkgray"
                android:textSize="@dimen/size16" />
            <TextView
                android:id="@+id/text_orderDetali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_remark"
                android:layout_margin="@dimen/margin16"
                android:text="@string/orderDetali"
                android:textColor="@color/textDarkgray"
                android:textSize="@dimen/size16" />
            <TextView
                android:id="@+id/text_orderCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_orderDetali"
                android:layout_marginLeft="@dimen/margin16"
                android:text="@string/orderCode"
                android:textColor="@color/textDarkgray"
                android:textSize="@dimen/size16" />
            <TextView
                android:id="@+id/text_payWay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_orderCode"
                android:layout_marginLeft="@dimen/margin16"
                android:text="@string/payWay"
                android:textColor="@color/textDarkgray"
                android:textSize="@dimen/size16" />
            <TextView
                android:id="@+id/text_orderTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_payWay"
                android:layout_marginLeft="@dimen/margin16"
                android:layout_marginBottom="@dimen/margin16"
                android:text="@string/orderTime"
                android:textColor="@color/textDarkgray"
                android:textSize="@dimen/size16" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>